Category dropdown component created. Issue: dropdown items are not aligned with category button

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -173,58 +173,47 @@
   overflow-y:scroll;
   
 }
-/* .inner{
+.category-drop{
   position:relative;
-  top:-5px;
-  left:-5px;
-  display:grid;
-  grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
-  grid-template-rows: 10fr 1fr; 
-  gap: 0px 0px; 
-  grid-template-areas: 
-    "date item brand product stock status sales revenue ave"
-    "date item brand product stock status sales revenue ave";
-  height:100%;
-  overflow-x:scroll;
-} */
-/* .inner div{
-  text-transform:uppercase;
-} */
-/* .outer{
-  background:#DD9D34;
-  position:relative;
-  top:-5px;
-  left:-5px;
-  font-size:25px;
-  font-weight:600;
-  line-height:30px;
-  display:flex;
-  align-items:center;
+  margin-top:1vh;
+  justify-content: center;
+  display:inline-block;
+  min-width:100px;
+}
+
+.category-btn{
+  background:#FFFFFFFF;
+  color:#DDBC86;
+  border:5px solid #FFFFFFFF;
+  border-radius:25px;
+}
+.category-text{
+  font-size:15px;
   text-align:center;
+  padding:12px 16px;
 }
 
-.date{
-  background:red;
-}
-.item{
-    background:red;
-}
-.brand{
-  background:red;
-}
-.product{
-    background:red;
-}
-.stock{
-  background:red;
-}
-.status{
-  background:red;
+.category-drop :hover .category-down{
+  display:block;
 }
 
-.revenue{
-  background:red;
+.category-down{
+  display: none;
+  position: absolute;
+  background-color: #FFFFFFFF;
+  min-width:100px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius:25px;
+  margin-top:1vh;
 }
-.ave{
-  background:red;
-} */
+.arrow-down{
+  margin-left:5px;
+  margin-bottom:5px;
+  border: solid #DDBC86;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
